<resources>
    <string name="app_name">foodcraze</string>
    <string name="slogan"> IT’S GOOD MOOD FOOD</string>
    <string name="slogan1"> No matter where you are whether you are at home or in the office,or on the beach.we will find you and we will feed you.</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_Food_detail">Food Detail </string>
    <string name="menu_home">Home</string>
    <string name="size">Size</string>
    <string name="add_on">Addon</string>
    <string name="action_clear_cart">Clear Cart</string>
    <string name="menu_cart">Cart</string>
    <string name="view_order">View Orders</string>
    <string name="sign_out">Sign Out</string>
    <string name="menu_menu">Categories</string>
    <string name="menu_Food_List">Food List </string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="best_deals">Best Deals</string>
    <string name="home_second">Home Second</string>
    <string name="menu">Menu</string>
    <string name="popular_categories">Popular Categories</string>
</resources>
