<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.foodcraze.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.foodcraze.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.foodcraze.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_food_list"
        android:name="com.example.foodcraze.ui.foodlist.FoodListFragment"
        android:label="@string/menu_Food_List"
        tools:layout="@layout/fragment_food_list" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.foodcraze.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_view_order"
        android:name="com.example.foodcraze.ui.view_orders.viewOrderFragment"
        android:label="@string/view_order"
        tools:layout="@layout/fragment_view_order" />

    <fragment
        android:id="@+id/nav_food_detail"
        android:name="com.example.foodcraze.ui.fooddetail.FoodDetailFragment"
        android:label="@string/menu_Food_detail"
        tools:layout="@layout/fragment_food_detail" >
        <action
            android:id="@+id/action_nav_food_detail_self"
            app:destination="@id/nav_food_detail" />
    </fragment>

</navigation>